# ComfyUI-HunyuanVideoStyler

./: HunyuanVideoStyler.py  README.md  __init__.py  pyproject.toml
data/camera/: camera_styles.json
data/cinematic_color/: color_styles.json
data/composition/: composition_styles.json
data/effects/: effects_styles.json
data/lighting/: lighting_styles.json
data/movie_scenes/: movie_scenes_styles.json
data/shooting/: shooting_styles.json
data/timeofday/: timeofday_styles.json
data/video_styles/: hunyuan_video_styles.json
data/weather/: weather_styles.json
workflow/: hunhuan-styler example.json
