[project]
name = "hunyuanvideostyler"
description = "A custom node for ComfyUI that adds cinematic and movie scene styles to video generation prompts. This node helps create more dynamic and professional-looking video outputs by incorporating iconic movie scene aesthetics."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/ShmuelRonen/ComfyUI-HunyuanVideoStyler"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-HunyuanVideoStyler"
Icon = ""
